Stream client/server (only used to run javascripts)